--- a/main_template.html
+++ b/main_template.html
@@ -1,9 +1,11 @@
-@require(leaderboard)
+@require(preview_leaderboard, leaderboard)
 
 <html>
 
 <head>
     <title>All-Inspiration Win Rate Leaderboard</title>
+    <meta name="description" content=" @preview_leaderboard ">
+    <meta name="author" content="All-Inspiration Win Rate Leaderboard">
 </head>
 
 <body>
