Renamed win rate percentile column

--- a/main_template.html
+++ b/main_template.html
@@ -28,7 +28,7 @@
         <tr>
             <th class="allin-red">Rank</th>
             <th>Player</th>
-            <th>Win Rate Percentile</th>
+            <th>Top Percentile of Win Rate Probability</th>
         </tr>
 
         @for rank, name, percentile in leaderboard:
