added time zone app

--- a/winrate_template.html
+++ b/winrate_template.html
@@ -7,7 +7,7 @@
     <meta name="description" content=" @preview_leaderboard ">
     <meta name="author" content="All-Inspiration Win Rate Leaderboard">
 
-     <link rel="stylesheet" type="text/css" href="static/main.css">
+     <link rel="stylesheet" type="text/css" href="/static/main.css">
 </head>
 
 <body>
