removed automatic local timezone detection, added local_tz param

--- a/timezone_template.html
+++ b/timezone_template.html
@@ -1,10 +1,14 @@
-@require(result_preview, result)
+@require(url, result_1, result_2, result_3, result)
 
 <html>
 
 <head>
     <title>All-Inspiration Time Zone Converter</title>
-    <meta name="description" content=" @result_preview ">
+    <meta property="og:url" content="@url" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="@result_1" />
+    <meta property="og:description" content="@result_2" />
+    <meta property="og:site_name" content="@result_3" />
 
      <link rel="stylesheet" type="text/css" href="/static/main.css">
 </head>
@@ -17,7 +21,7 @@
              alt="All-Inspiration">
 
         <h1>
-            <span class="allin-red">Local</span> Time Zone Converter
+            <span class="allin-red">Time</span> Zone Converter
         </h1>
     </div>
 
