removed utc offset, added author meta tag

--- a/timezone_template.html
+++ b/timezone_template.html
@@ -4,11 +4,12 @@
 
 <head>
     <title>All-Inspiration Time Zone Converter</title>
-    <meta property="og:url" content="@url" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="@result_1" />
     <meta property="og:description" content="@result_2" />
     <meta property="og:site_name" content="@result_3" />
+    <meta name="author" content="@result_3">
+
 
      <link rel="stylesheet" type="text/css" href="/static/main.css">
 </head>
