meta tag hackery

--- a/timezone_template.html
+++ b/timezone_template.html
@@ -1,14 +1,14 @@
-@require(url, result_1, result_2, result_3, result)
+@require(today, result_1, result_2, result_3, result)
 
 <html>
 
 <head>
     <title>All-Inspiration Time Zone Converter</title>
+    <meta name="author" content="@result_1">
+    <meta name="description" content="@result_2" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="@result_1" />
-    <meta property="og:description" content="@result_2" />
-    <meta property="og:site_name" content="@result_3" />
-    <meta name="author" content="@result_3">
+    <meta property="og:title" content="@result_3" />
+    <meta property="og:site_name" content="@today" />
 
 
      <link rel="stylesheet" type="text/css" href="/static/main.css">
