condensed info, prevent browser caching

--- a/timezone_template.html
+++ b/timezone_template.html
@@ -4,10 +4,10 @@
 
 <head>
     <title>All-Inspiration Time Zone Converter</title>
+    <meta http-equiv="cache-control" content="no-cache" />
+
     <meta name="author" content="@result_1">
     <meta name="description" content="@result_2" />
-    <meta property="og:type" content="article" />
-    <meta property="og:title" content="@result_3" />
     <meta property="og:site_name" content="@today" />
 
 
